feat: Add Jour - Jours + Week and Matiere View Binding + refactor ExcelWeekParser

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -27,7 +27,7 @@
                 <Label FontSize="12" x:Name="lbDropExcelSemaine" Content="Glissez le fichier Excel ici " Background="LightGray" FontFamily="Poppins" VerticalAlignment="Center" Width="300" HorizontalAlignment="Left" />
             </Border>
         </StackPanel>
-        <DataGrid Margin="10,10,10,10" Grid.ColumnSpan="2" x:Name="dgCells" Height="290" VerticalAlignment="Bottom">
+        <DataGrid Margin="10,10,10,10" Grid.ColumnSpan="2" x:Name="dgCells" Height="290" VerticalAlignment="Bottom" MouseDoubleClick="dgCells_MouseDoubleClick" >
             
             
         </DataGrid>
