feat: Add homewindow for navigating + back button

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,27 +6,7 @@
         xmlns:local="clr-namespace:MailCreator"
         mc:Ignorable="d"
         Title="MailCreator" Height="450" Width="800">
-    <Grid  >
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="197*"/>
-            <ColumnDefinition Width="199*"/>
-        </Grid.ColumnDefinitions>
-
-
-
-        <StackPanel  Margin="10,25,10,0" VerticalAlignment="Top" Grid.ColumnSpan="2">
-            <Label Content="Mail Créator" VerticalAlignment="Top" HorizontalAlignment="Center" FontSize="28" FontWeight="Bold" FontFamily="Poppins"  Margin="0,0,0,0"/>
-        </StackPanel>
-
-
-
-
-        <StackPanel Margin="10,82,10,0" x:Name="panExcelSemaine"  Orientation="Horizontal" VerticalAlignment="Top"    AllowDrop="True" Drop="panExcelSemaine_Drop"  DragOver="panExcelSemaine_DragOver" Grid.ColumnSpan="2" >
-            <Label FontSize="14" Content="Excel de la semaine : " FontFamily="Poppins" VerticalAlignment="Center" HorizontalAlignment="Left" />
-            <Border x:Name="bordExcelSemaine" BorderThickness="2" BorderBrush="Transparent">
-                <Label FontSize="12" x:Name="lbDropExcelSemaine" Content="Glissez le fichier Excel ici " Background="LightGray" FontFamily="Poppins" VerticalAlignment="Center" Width="300" HorizontalAlignment="Left" />
-            </Border>
-        </StackPanel>
-
+    <Grid>
+        <Frame x:Name="MainFrame"/>
     </Grid>
 </Window>
