--- a/Windows/WeekWindow.xaml
+++ b/Windows/WeekWindow.xaml
@@ -57,8 +57,48 @@
 
         <ListView  ItemsSource="{Binding Weeks}" MouseDoubleClick="lvWeek_MouseDoubleClick"  x:Name="lvWeek"  Height="239" VerticalAlignment="Top"  Margin="0,100,0,0">
             <ListView.View>
-                <GridView AllowsColumnReorder="true"  x:Name="gvWeek" ColumnHeaderToolTip="Semaines">
-                    <GridViewColumn x:Name="gvcSemaine" DisplayMemberBinding="{Binding Semaine}" Header="Semaines" Width="100"/>
+                <GridView AllowsColumnReorder="true"  x:Name="gvWeek" ColumnHeaderToolTip="Semaines" >
+                    <GridViewColumn x:Name="gvcSemaine"  Header="Semaines" Width="100">
+
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Semaine}">
+                                    <TextBlock.Style>
+                                        <Style TargetType="TextBlock">
+                                            <Setter Property="Background" Value="Transparent" />
+                                            <Style.Triggers>
+                                                <DataTrigger Binding="{Binding Matieres.Count}" Value="0">
+                                                    <Setter Property="Foreground" Value="Red" />
+                                                </DataTrigger>
+                                            </Style.Triggers>
+                                        </Style>
+                                    </TextBlock.Style>
+                                </TextBlock>
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+                    <GridViewColumn  x:Name="gvcNbSemaine"  Header="Nombre de matières" >
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <StackPanel Orientation="Horizontal">
+                                    <TextBlock>
+                                        <TextBlock.Style>
+                                            <Style TargetType="TextBlock">
+                                                <Setter Property="Visibility" Value="Collapsed" />
+                                                <Style.Triggers>
+                                                    <DataTrigger Binding="{Binding Matieres.Count}" Value="0">
+                                                        <Setter Property="Visibility" Value="Visible" />
+                                                        <Setter Property="Text" Value="Aucune matière trouvée" />
+                                                    </DataTrigger>
+                                           
+                                                </Style.Triggers>
+                                            </Style>
+                                        </TextBlock.Style>
+                                    </TextBlock>
+                                </StackPanel>
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
                 </GridView>
             </ListView.View>
         </ListView>
