--- a/Windows/HomeWindow.xaml
+++ b/Windows/HomeWindow.xaml
@@ -13,13 +13,27 @@
         </StackPanel>
 
 
-
-
-        <StackPanel Margin="10,82,10,0" x:Name="panExcelSemaine"  Orientation="Horizontal" VerticalAlignment="Top"    AllowDrop="True" Drop="panExcelSemaine_Drop"  DragOver="panExcelSemaine_DragOver" Grid.ColumnSpan="2" >
+        <StackPanel Margin="10,80,10,0" x:Name="panExcelSemaine"  Orientation="Horizontal" VerticalAlignment="Top"    AllowDrop="True" Drop="panExcelSemaine_Drop"  DragOver="panExcelSemaine_DragOver" Grid.ColumnSpan="2" >
             <Label FontSize="14" Content="Excel de la semaine : " FontFamily="Poppins" VerticalAlignment="Center" HorizontalAlignment="Left" />
             <Border x:Name="bordExcelSemaine" BorderThickness="2" BorderBrush="Transparent">
                 <Label FontSize="12" x:Name="lbDropExcelSemaine" Content="Glissez le fichier Excel ici " Background="LightGray" FontFamily="Poppins" VerticalAlignment="Center" Width="300" HorizontalAlignment="Left" />
             </Border>
         </StackPanel>
+
+
+        <ListView  ItemsSource="{Binding Professeurs}"  x:Name="lvProfesseurs"  Height="239" VerticalAlignment="Top" Margin="0,120,0,0">
+
+            <ListView.View>
+                <GridView AllowsColumnReorder="true"  x:Name="gvMatieres" ColumnHeaderToolTip="Matières">
+                    <GridViewColumn x:Name="gvcCivilite" DisplayMemberBinding="{Binding Civilite}" Header="Civilité" />
+                    <GridViewColumn x:Name="gvcNom" DisplayMemberBinding="{Binding Name}" Header="Nom"/>
+                    <GridViewColumn x:Name="gvcPrenom" DisplayMemberBinding="{Binding Prenom}" Header="Prénom" />
+                    <GridViewColumn x:Name="gvcMail" DisplayMemberBinding="{Binding Mail}" Header="Mail"/>
+
+                </GridView>
+
+            </ListView.View>
+        </ListView>
+
     </Grid>
 </UserControl>
