--- a/Windows/ProfesseurCreateWindow.xaml
+++ b/Windows/ProfesseurCreateWindow.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="MailCreator.Windows.ProfesseurUpdateWindow"
+﻿<UserControl x:Class="MailCreator.Windows.ProfesseurCreateWindow"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -13,21 +13,21 @@
                 <Image Source="../Images/back.png" Width="16" Height="16" />
             </StackPanel>
         </Button>
-
-
         <Button x:Name="btnHome" Width="30" Click="btnHome_Click"  Height="30" Background="Transparent" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="60,20,0,0">
             <StackPanel Orientation="Horizontal">
                 <Image Source="../Images/house.png" Width="16" Height="16" />
             </StackPanel>
         </Button>
 
+
+
         <StackPanel  Margin="10,25,10,0" VerticalAlignment="Top" Grid.ColumnSpan="2">
-            <Label Content="Modifier enseignant" VerticalAlignment="Top" HorizontalAlignment="Center" FontSize="28" FontWeight="Bold" FontFamily="Poppins"  Margin="0,0,0,0"/>
+            <Label Content="Ajouter un enseignant" VerticalAlignment="Top" HorizontalAlignment="Center" FontSize="28" FontWeight="Bold" FontFamily="Poppins"  Margin="0,0,0,0"/>
         </StackPanel>
 
         <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
 
-            <StackPanel Orientation="Vertical" Margin="20,70,20,0" HorizontalAlignment="Left"  >
+            <StackPanel Orientation="Vertical" Margin="20,80,20,0" HorizontalAlignment="Left"  >
 
                 <StackPanel Margin="0,0,0,5" Orientation="Vertical">
                     <Label FontSize="14">Nom :</Label>
@@ -66,25 +66,11 @@
 
             </StackPanel>
 
-            <StackPanel Orientation="Vertical" HorizontalAlignment="Stretch" >
-                <ListView  ItemsSource="{Binding Professeurs}" MouseDoubleClick="lvProfesseurs_MouseDoubleClick"  x:Name="lvProfesseurs" Height="275" Width="500" VerticalAlignment="Top" Margin="20,100,20,0">
+           
 
-                    <ListView.View>
-                        <GridView AllowsColumnReorder="true"  x:Name="gvMatieres" ColumnHeaderToolTip="Matières">
-                            <GridViewColumn x:Name="gvcCivilite" DisplayMemberBinding="{Binding Civilite}" Header="Civilité" Width="50" />
-                            <GridViewColumn x:Name="gvcNom" DisplayMemberBinding="{Binding Name}" Header="Nom" Width="100"/>
-                            <GridViewColumn x:Name="gvcPrenom" DisplayMemberBinding="{Binding Prenom}" Header="Prénom" Width="100"/>
-                            <GridViewColumn x:Name="gvcMail" DisplayMemberBinding="{Binding Mail}" Header="Mail" Width="200"/>
-
-                        </GridView>
-
-                    </ListView.View>
-                </ListView>
-
-            </StackPanel>
-            
         </StackPanel>
 
-     
+
+
     </Grid>
 </UserControl>
