--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,6 +7,14 @@
         mc:Ignorable="d"
         Title="MailCreator" Height="450" Width="800">
     <Grid>
+        <Popup x:Name="popup" IsOpen="False"  HorizontalAlignment="Stretch" Margin="0,0,0,0"  >
+
+            <Border x:Name="bPopup" Background="White" BorderThickness="1"  BorderBrush="Black" HorizontalAlignment="Stretch" Height="50" VerticalAlignment="Top" >
+                <TextBlock x:Name="txtPopup" VerticalAlignment="Center" Margin="20,0,20,0" HorizontalAlignment="Center" FontSize="16" Text="Contenu de la Popup"/>
+            </Border>
+
+
+        </Popup>
         <Frame x:Name="MainFrame"/>
     </Grid>
 </Window>
