--- a/Windows/Professeurs/ProfesseurWindow.xaml
+++ b/Windows/Professeurs/ProfesseurWindow.xaml
@@ -1,16 +1,16 @@
-﻿<UserControl x:Class="MailCreator.Windows.ProfesseurWindow"
+﻿<UserControl x:Class="MailCreator.Windows.Professeurs.ProfesseurWindow"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:MailCreator.Windows"
+             xmlns:local="clr-namespace:MailCreator.Windows.Professeurs"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Background="White">
 
         <Button x:Name="btnBack" Width="30" Click="btnBack_Click"  Height="30" Background="Transparent" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="20,20,0,0">
             <StackPanel Orientation="Horizontal">
-                <Image Source="../Images/back.png" Width="16" Height="16" />
+                <Image Source="../../Images/back.png" Width="16" Height="16" />
             </StackPanel>
         </Button>
 
@@ -29,7 +29,7 @@
                 <Button x:Name="btnSupprimer"  Click="btnSupprimer_Click" Width="150"  Height="40" Background="Transparent" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,0,0,0">
                     <StackPanel Orientation="Horizontal">
                         <Label  HorizontalContentAlignment="Center" Width="75">Supprimer</Label>
-                        <Image Width="75" Margin="10,0,0,0" HorizontalAlignment="Center" Source="../Images/delete.png" Height="25" />
+                        <Image Width="75" Margin="10,0,0,0" HorizontalAlignment="Center" Source="../../Images/delete.png" Height="25" />
                     </StackPanel>
                 </Button>
 
@@ -37,7 +37,7 @@
                 <Button x:Name="btnCreer"  Click="btnCreer_Click" Width="150"  Height="40" Background="Transparent" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,20,0,0">
                     <StackPanel Orientation="Horizontal">
                         <Label  HorizontalContentAlignment="Center" Width="75">Créer</Label>
-                        <Image Width="75" Margin="10,0,0,0" HorizontalAlignment="Center" Source="../Images/plus.png"  Height="25" />
+                        <Image Width="75" Margin="10,0,0,0" HorizontalAlignment="Center" Source="../../Images/plus.png"  Height="25" />
                     </StackPanel>
                 </Button>
 
@@ -45,7 +45,7 @@
                 <Button x:Name="btnModifier"  Click="btnModifier_Click" Width="150"  Height="40" Background="Transparent" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,20,0,0">
                     <StackPanel Orientation="Horizontal">
                         <Label HorizontalContentAlignment="Center" Width="75">Modifier</Label>
-                        <Image Width="75"  HorizontalAlignment="Center" Margin="10,0,0,0" Source="../Images/edit.png"  Height="25" />
+                        <Image Width="75"  HorizontalAlignment="Center" Margin="10,0,0,0" Source="../../Images/edit.png"  Height="25" />
                     </StackPanel>
                 </Button>
 
