--- a/Windows/Week/WeekWindow.xaml
+++ b/Windows/Week/WeekWindow.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="MailCreator.Windows.WeekWindow"
+﻿<UserControl x:Class="MailCreator.Windows.Week.WeekWindow"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:MailCreator.Windows"
+             xmlns:local="clr-namespace:MailCreator.Windows.Week"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Background="White">
@@ -46,7 +46,7 @@
                     <GridViewColumn x:Name="gvcVisioconference" DisplayMemberBinding="{Binding Visioconference}" Header="Visioconference" Width="100">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <Image Source="{Binding Visioconference, Converter={StaticResource  ./Images/checked.png}}" Width="16" Height="16"/>
+                                <Image Source="{Binding Visioconference, Converter={StaticResource  ../../Images/checked.png}}" Width="16" Height="16"/>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
