--- a/Windows/Week/WeekSelectWindow.xaml
+++ b/Windows/Week/WeekSelectWindow.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="MailCreator.Windows.Week.WeekWindow"
+﻿<UserControl x:Class="MailCreator.Windows.Week.WeekSelectWindow"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -11,28 +11,22 @@
 
         <Button x:Name="btnBack" Width="30" Click="btnBack_Click"  Height="30" Background="Transparent" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="20,20,0,0">
             <StackPanel Orientation="Horizontal">
-                <Image Source="../Images/back.png" Width="16" Height="16" />
+                <Image Source="../../Images/back.png" Width="16" Height="16" />
             </StackPanel>
         </Button>
 
-        <Label FontSize="18" FontWeight="SemiBold" x:Name="lbTitle" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,10,0,0" FontFamily="Poppins" >Excel planification des salles</Label>
-
-        <StackPanel Orientation="Horizontal" Height="48" Margin="0,50,0,0" VerticalAlignment="Top" >
-            <Label FontSize="18" FontWeight="Medium" HorizontalAlignment="Left"  FontFamily="Poppins" VerticalAlignment="Center" Content="Choisissz une semaine :" />
-
-            <TextBox InputScope="Number" x:Name="txtSemaine"   Width="100"  Height="20" VerticalAlignment="Center" />
+        <Label FontSize="28" FontWeight="SemiBold" x:Name="lbTitle" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,10,0,0" FontFamily="Poppins" >Sélectionnez une semaine</Label>
 
 
-            <Button x:Name="btnValiderSemaine" Width="20" Click="btnValiderSemaine_Click" Height="20" VerticalAlignment="Center" HorizontalAlignment="Left">
-                <StackPanel Orientation="Horizontal">
-                    <Image Source="../Images/checked.png" Width="16" Height="16" />
-                </StackPanel>
-            </Button>
+        <StackPanel Margin="10,80,10,0" x:Name="panExcelSemaine"  Orientation="Horizontal" VerticalAlignment="Top"    AllowDrop="True" Drop="panExcelSemaine_Drop"  DragOver="panExcelSemaine_DragOver" Grid.ColumnSpan="2" >
+            <Label FontSize="14" Content="Excel de la semaine : " FontFamily="Poppins" VerticalAlignment="Center" HorizontalAlignment="Left" />
+            <Border x:Name="bordExcelSemaine" BorderThickness="2" BorderBrush="Transparent">
+                <Label FontSize="14" x:Name="lbDropExcelSemaine" Content="Glissez le fichier Excel ici " Background="LightGray" FontFamily="Poppins" VerticalAlignment="Center" Width="300" HorizontalAlignment="Left" />
+            </Border>
         </StackPanel>
 
-
-
-        <ListView  ItemsSource="{Binding Matieres}"  x:Name="lvMatieres"  Height="239" VerticalAlignment="Top" Margin="0,100,0,0">
+        <Label  VerticalAlignment="Top" Margin="10,130,0,0" FontSize="8">Double cliquez sur une semaine pour la sélectionner</Label>
+        <!--<ListView  ItemsSource="{Binding Matieres}"  x:Name="lvMatieres"  Height="239" VerticalAlignment="Top" Margin="0,150,0,0">
 
             <ListView.View>
 
@@ -53,16 +47,16 @@
                 </GridView>
 
             </ListView.View>
-        </ListView>
+        </ListView>-->
 
-        <ListView  ItemsSource="{Binding Weeks}" MouseDoubleClick="lvWeek_MouseDoubleClick"  x:Name="lvWeek"  Height="239" VerticalAlignment="Top"  Margin="0,100,0,0">
+        <ListView  ItemsSource="{Binding Semaine}" MouseDoubleClick="lvWeek_MouseDoubleClick"  x:Name="lvWeek"  Margin="0,150,0,50">
             <ListView.View>
                 <GridView AllowsColumnReorder="true"  x:Name="gvWeek" ColumnHeaderToolTip="Semaines" >
                     <GridViewColumn x:Name="gvcSemaine"  Header="Semaines" Width="100">
 
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding Semaine}">
+                                <TextBlock Text="{Binding Nom}">
                                     <TextBlock.Style>
                                         <Style TargetType="TextBlock">
                                             <Setter Property="Background" Value="Transparent" />
@@ -81,19 +75,7 @@
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <StackPanel Orientation="Horizontal">
-                                    <TextBlock>
-                                        <TextBlock.Style>
-                                            <Style TargetType="TextBlock">
-                                                <Setter Property="Visibility" Value="Collapsed" />
-                                                <Style.Triggers>
-                                                    <DataTrigger Binding="{Binding Matieres.Count}" Value="0">
-                                                        <Setter Property="Visibility" Value="Visible" />
-                                                        <Setter Property="Text" Value="Aucune matière trouvée" />
-                                                    </DataTrigger>
-                                           
-                                                </Style.Triggers>
-                                            </Style>
-                                        </TextBlock.Style>
+                                    <TextBlock Text="{Binding Matieres.Count}">                                     
                                     </TextBlock>
                                 </StackPanel>
                             </DataTemplate>
